--- a/requirements.txt
+++ b/requirements.txt
@@ -70,7 +70,7 @@ nest-asyncio==1.5.1
 networkx==2.8.2
 nltk==3.6.5
 notebook==6.3.0
-numpy~=1.16.0
+numpy==1.21.0
 oauthlib==3.1.0
 openpyxl==3.0.9
 opt-einsum==3.3.0
