--- a/requirements.txt
+++ b/requirements.txt
@@ -13,6 +13,7 @@ catalogue==2.0.6
 certifi==2020.12.5
 cffi==1.14.5
 chardet==4.0.0
+click==8.1.3
 colorama==0.4.4
 cryptography==36.0.0
 cssselect==1.1.0
