--- a/requirements.txt
+++ b/requirements.txt
@@ -1,154 +1,4 @@
-absl-py==0.12.0
-apyori==1.1.2
-argon2-cffi==20.1.0
-astunparse==1.6.3
-async-generator==1.10
-attrs==20.3.0
-backcall==0.2.0
-beautifulsoup4==4.11.1
-bleach==3.3.0
-blis==0.7.4
-cachetools==4.2.2
-catalogue==2.0.6
-certifi==2020.12.5
-cffi==1.14.5
-chardet==4.0.0
-click==8.0
-colorama==0.4.4
-cryptography==36.0.0
-cssselect==1.1.0
-custom-inherit==2.4.0
-cycler==0.10.0
-cymem==2.0.5
-decorator==4.4.2
-defusedxml==0.7.1
-Deprecated==1.2.13
-entrypoints==0.3
-et-xmlfile==1.1.0
-Flask==2.1.2
-flatbuffers==1.12
-gast==0.4.0
-google-auth==1.30.0
-google-auth-oauthlib==0.4.4
-google-pasta==0.2.0
-grpcio==1.34.1
-h11==0.12.0
-idna==2.10
-importlib-metadata==4.11.3
-ipykernel==5.5.3
-ipython==7.22.0
-ipython-genutils==0.2.0
-ipywidgets==7.6.3
-itsdangerous==2.1.2
-jedi==0.18.0
-Jinja2==3.1.2
-joblib==1.0.1
-jsonschema==3.2.0
-jupyter==1.0.0
-jupyter-client==6.1.12
-jupyter-console==6.4.0
-jupyter-core==4.7.1
-jupyterlab-pygments==0.1.2
-jupyterlab-widgets==1.0.0
-Keras==2.8.0
-keras-nightly==2.5.0.dev2021032900
-Keras-Preprocessing==1.1.2
-kiwisolver==1.3.1
-kmodes==0.12.1
-lxml==4.8.0
-Markdown==3.3.4
-MarkupSafe==2.1.1
-matplotlib==3.4.1
-mistune==0.8.4
-mlxtend==0.19.0
-murmurhash==1.0.5
-mysqlclient==2.1.0
-nbclient==0.5.3
-nbconvert==6.5.0
-nbformat==5.1.2
-nest-asyncio==1.5.1
-networkx==2.8.2
-nltk==3.6.5
-notebook==6.3.0
-numpy==1.21.0
-oauthlib==3.1.0
-openpyxl==3.0.9
-opt-einsum==3.3.0
-outcome==1.1.0
-packaging==20.9
+MySQL-python==1.2.5
+numpy==1.20.2
 pandas==1.4.2
-pandocfilters==1.4.3
-parso==0.8.2
-pathy==0.4.0
-patsy==0.5.1
-pickleshare==0.7.5
-Pillow==8.1.2
-preshed==3.0.5
-prometheus-client==0.9.0
-prompt-toolkit==3.0.18
-protobuf==3.17.0
-PuLP==2.6.0
-pyasn1==0.4.8
-pyasn1-modules==0.2.8
-pycparser==2.20
-pydantic==1.7.4
-Pygments==2.8.1
-pyOpenSSL==21.0.0
-pyparsing==2.4.7
-pyquery==1.4.3
-pyrsistent==0.17.3
-python-dateutil==2.8.1
-pytz==2021.1
-pywinpty==0.5.7
-PyYAML==5.4.1
-pyzmq==22.0.3
-qtconsole==5.0.3
-QtPy==1.9.0
-regex==2021.10.23
-requests==2.25.1
-requests-oauthlib==1.3.0
-rsa==4.7.2
-scikit-criteria==0.6
-scikit-learn==0.24.1
-scipy==1.7.2
-seaborn==0.11.1
-selenium==4.1.0
-Send2Trash==1.5.0
-six==1.15.0
-sklearn==0.0
-smart-open==3.0.0
-sniffio==1.2.0
-sortedcontainers==2.4.0
-soupsieve==2.3.2.post1
-spacy==3.2.4
-spacy-legacy==3.0.8
-srsly==2.4.1
-tensorboard==2.8
-tensorboard-data-server==0.6.1
-tensorboard-plugin-wit==1.8.0
-tensorflow==2.8.0
-tensorflow-estimator==2.5.0
-termcolor==1.1.0
-terminado==0.9.4
-testpath==0.4.4
-Theano==1.0.5
-thinc==8.0.12
-threadpoolctl==2.1.0
-tinycss2==1.1.1
-tornado==6.1
-tqdm==4.60.0
-traitlets==5.0.5
-trio==0.19.0
-trio-websocket==0.9.2
-typer==0.4.0
-urllib3==1.26.4
-waitress==2.1.1
-wasabi==0.8.2
-wcwidth==0.2.5
-webencodings==0.5.1
-Werkzeug==2.0.1
-widgetsnbextension==3.5.1
-wrapt==1.12.1
-wsproto==1.0.0
-xgboost==1.6.0
-zipp==3.8.0
+scikit_learn==1.1.1
